# unnamed-game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
plugin/: CMakeLists.txt
plugin/include/: plugin.hpp
plugin/src/: plugin.cpp
samples/: CMakeLists.txt
samples/app/: main.cpp
samples/plugin/: main.cpp  plugin.cpp  plugin.hpp
samples/pong/: collision.cpp  collision.hpp  comp.hpp  factories.cpp  factories.hpp  image.cpp  image.h  main.cpp  render.hpp  stb_image.h  sys.cpp  sys.hpp  utils.hpp
samples/render_plugin/: render.cpp  render.hpp
sdk/: CMakeLists.txt
sdk/include/: ecs.hpp  plugin.hpp  sdk.hpp  system.hpp
sdk/src/: plugin_linux.cpp
sdk/src/linux/: plugin.cpp
sdk/src/windows/: plugin.cpp
